# DynamicSystemSimulator

./: .gitignore  CONTRIBUTING.md  README.md  double_pendulum.py  main.py  mkdocs.yml  pendulum.py  pyproject.toml  requirements.txt  simulator.py  solver.py  streamlit_app.py  visualizer.py
apps/streamlit/: app.py  layout.py  registry.py
artifacts/: README.md
core/: simulator.py  solver.py
docs/: controllers_wrappers.md  core_api.md  development.md  extending.md  installation.md  models.md  overview.md  reproducibility.md  scripts.md  streamlit_gui.md  troubleshooting.md
dss/controllers/: __init__.py  linearize.py  lqr_controller.py  simple_switcher.py  swingup.py  switcher.py
dss/core/: contracts.py  experiments.py  logger.py  pipeline.py  presets.py  sim_output.py  simulator.py  solver.py  types.py
dss/models/: __init__.py  dc_motor.py  double_pendulum.py  inverted_pendulum.py  lorenz.py  pendulum.py  vanderpol_circuit.py
dss/scripts/: double_p_chaos.py  inverted_case_study.py  performance.py
dss/utils/: __init__.py  angles.py
dss/wrappers/: closed_lood_cart.py  closed_loop_cart.py  motor_wrapper.py
inverted_pendulum/: closed_lood_cart.py  inverted_pendulum.py  linearize.py
inverted_pendulum/controllers/: lqr_controller.py  swingup.py  switcher.py
models/: double_pendulum.py  pendulum.py  vanderpoll_circuit.py
scripts/: gallery.py  inverted_case_study.py  pendulum_small_ang.py  vdp_limit_cycle.py
scripts/ch6/: README.md  behaviour_panels.py  benchmark_suite.py  convergence_sweeps.py  paths.py
scripts/data/: ch6_gallery_vdp.csv  (+11 more)
scripts_leagacy/: dc_motor_step.py  lorenz_attractor.py  performance.py
single_pendulum/: pendulum.py
systems/: __init__.py  dc_motor.py  double_pendulum.py  motor_wrapper.py  pendulum.py  vanderpoll_circuit.py
tests/: test_controllers.py  test_models.py
tools/: ch6_generate_62.py  ch6_generate_62_white_blacklines_with_inverted_v2.py  ch6_perf_baseline_uniform.py
vizualizer/: visualizer.py
(+66 files in other folders)
