[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-system-simulator"
version = "0.1.0"
description = "Dynamic System Simulator (DSS): classic dynamical systems + Streamlit/Plotly GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "plotly>=5.15",
  "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5.0",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["dss*", "apps*"]}}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "dss/scripts/data",
  "dss/scripts/figs",
  "dss/scripts/logs",
]

[tool.ruff.lint]
# Keep linting lightweight until the codebase is fully formatted.
# CI focuses on real errors (undefined names, syntax-like issues).
select = ["F"]
ignore = ["F401"]

