[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-system-simulator"
version = "0.1.0"
description = "Dynamic System Simulator (DSS): classic dynamical systems with a Streamlit/Plotly GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "plotly>=5.15",
]

[project.optional-dependencies]
gui = [
  "streamlit>=1.28",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mkdocs>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".venv",
  "venv",
  "__pycache__",
  "artifacts",
  "site",
]

[tool.ruff.lint]
# Start lightweight; expand gradually when the codebase stabilizes.
select = ["F"]
ignore = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
